<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="161dp"
        android:layout_height="145dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/airplane" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textSize="30dp"
        android:textStyle="italic"
       />

    <Button
        android:id="@+id/url1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/icon_server"
        android:text="@string/local_host_1"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="italic" />
    <Button
        android:id="@+id/url2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/icon_server"
        android:text="@string/loca_host_2"
        android:textSize="20dp"
        android:textStyle="italic" />
    <Button
        android:id="@+id/url3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/icon_server"
        android:text="@string/local_host_3"
        android:textSize="20dp"
        android:textStyle="italic" />
    <Button
        android:id="@+id/url4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/icon_server"
        android:text="@string/local_host_4"
        android:textSize="20dp"
        android:textStyle="italic" />
    <Button
        android:id="@+id/url5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/icon_server"
        android:text="@string/local_host_5"
        android:textSize="20dp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/typeUrl"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints = "@string/type_url"
            android:background="@drawable/edit"
            android:hint="@string/type_url"
            android:inputType="textUri"
            android:padding="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/connect"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>


